--- a/config.toml
+++ b/config.toml
@@ -8,19 +8,19 @@ title = 'NCC website'
   # Main Menu
   [[menu.Main]]
   name = "About"
-  url= "/about/"
+  url= "about/"
   weight = 1
-  # [[menu.Main]]
-  # name = "Team"
-  # url= "/team/"
-  # weight = 2
+  [[menu.Main]]
+  name = "Gallery"
+  url= "gallery/"
+  weight = 2
   # [[menu.Main]]
   # name = "Enrollment"
   # url= "/enrollment/"
   # weight = 3
   [[menu.Main]]
   name = "Contact"
-  url= "/contact/"
+  url= "contact/"
   weight = 4
 
   # Sitemap Menu
@@ -36,19 +36,19 @@ title = 'NCC website'
 [params]
   aboutPageURL = "blog"
   contactLink = "contact"
-  copyright = "© {year} <a href=\"https://staticmania.com/\" target=\"_blank\">StaticMania </a>"
+  copyright = "© {year} <a href=\"https://nss.iith.ac.in\" target=\"_blank\">NCC </a>"
   fabFormURL =  "https://fabform.io/f/u00kv3-"
   googleAnalytics = "G-JZ95FEWF9K"
-  logo = "images/logo.png"
-  footerlogo = "images/logo.png"
-  footerDescription = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quia ab, natus fugiat voluptas saepe ipsum animi officiis in molestiae?"
+  logo = "images/logo.jpeg"
+  footerlogo = "images/logo.jpeg"
+  footerDescription = "For more Info please visit the official NCC website at indiancc.nic.in to learn more about NCC."
 
   [params.address]
-  address = "115 W 18th St. <br>  New York, NY 10011"
-  email = "hello@example.com"
+  address = "IIT Hyderabad, Kandi, Telangana"
+  email = "office.ncc@iith.ac.in"
   openingDesc = "Give us a call or drop by anytime, we endeavour to answer all enquiries within 24 hours on business days."
   openingHours = "We are open from 7am — 7pm week days."
-  phone = "+(448) 833 5272 332"
+  phone = ""
 
   [params.map]
   APIkey = "AIzaSyC9rV6yesIygoVKTD6QLf_iCa9eiIIHqZ0"
