--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,7 +1,7 @@
 ---
-title: "<h1> SOME CONTENT</h1>"
+title: "<h1> Motto of NCC</h1>"
 enable: true
-subtitle: SOME CONTENT SOME CONTENT SOME CONTENT SOME CONTENT
+subtitle: <i><q>Unity and Discipline</q><i>
 heroBGimg: "images/hero/hero-background.jpg"
 heroVideo: "https://vimeo.com/45830194?autoplay=1&rel=0"
 herosVideoDesc: "<span> <strong>coHub. in</strong> 30 Seconds</span>"
