--- a/data/gallery.yml
+++ b/data/gallery.yml
@@ -18,5 +18,8 @@ galleryImage2:
   - image: "images/ncc-gallery/7.JPG"
   - image: "images/ncc-gallery/8.JPG"
   - image: "images/ncc-gallery/9.JPG"
+  - image: "images/ncc-gallery/29.JPG"
+  - image: "images/ncc-gallery/30.JPG"
+  - image: "images/ncc-gallery/31.JPG"
 ---
 
